# benchmark_mpj

./: .gitignore  README.md  benchmark.py  lbm_cylinder.jl  lbm_cylinder.m  lbm_cylinder.py  lbm_cylinder_opt.jl  lbm_cylinder_opt.m  lbm_cylinder_opt.py  nbody.jl  nbody.m  nbody.py  nbody_ic.py  nbody_opt.jl  nbody_opt.m  nbody_opt.py
C_lbm/: CMakeLists.txt  config.c  lbm.c  lbm.h  main.c  viz_ppm.c  viz_ppm.h
C_nbody/: CMakeLists.txt  main.c  nbody.c  nbody.h
fortran_lbm/: CMakeLists.txt  convert_ppm_to_png.py  lbm_cylinder.f90
fortran_nbody/: CMakeLists.txt  json_reader.f90  nbody.f90  nbody_ic_galaxy_spiral_N4000.json
